tmp/reco_output_2.txt
Traceback (most recent call last):
  File "/home/sulheru/OptiGrid_Project/og_pilot/optigrid_crm/manage.py", line 24, in <module>
    main()
  File "/home/sulheru/OptiGrid_Project/og_pilot/optigrid_crm/manage.py", line 20, in main
    execute_from_command_line(sys.argv)
  File "/home/sulheru/OptiGrid_Project/og_pilot/optigrid_crm/.venv/lib/python3.12/site-packages/django/core/management/__init__.py", line 444, in execute_from_command_line
    utility.execute()
  File "/home/sulheru/OptiGrid_Project/og_pilot/optigrid_crm/.venv/lib/python3.12/site-packages/django/core/management/__init__.py", line 418, in execute
    django.setup()
  File "/home/sulheru/OptiGrid_Project/og_pilot/optigrid_crm/.venv/lib/python3.12/site-packages/django/__init__.py", line 25, in setup
    apps.populate(settings.INSTALLED_APPS)
  File "/home/sulheru/OptiGrid_Project/og_pilot/optigrid_crm/.venv/lib/python3.12/site-packages/django/apps/registry.py", line 117, in populate
    app_config.import_models()
  File "/home/sulheru/OptiGrid_Project/og_pilot/optigrid_crm/.venv/lib/python3.12/site-packages/django/apps/config.py", line 270, in import_models
    self.models_module = import_module(models_module_name)
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/sulheru/OptiGrid_Project/og_pilot/optigrid_crm/apps/recommendations/models.py", line 26
    SOURCE_RULES = "rules"
                   ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
